--- a/app/less/style.less
+++ b/app/less/style.less
@@ -5,6 +5,7 @@
 @import "artistListAnsicht";
 @import "impressum";
 @import "lightbox";
+@import "warenkorb";
 
 /* Space out content a bit */
 body {
