--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,43 +1,25 @@
 
 <table align="center">
 
+    <!-- Gebit für die Beschreibung -->
+      <tr>
+          <td>
+              <div id="testxem">
+                  <p><strong>Fließende Satinbluse mit Volant</strong></p>
+                  <ol>
+                      <li>
+                          <p style="width: 250px"></p>
+                      </li>
+                  </ol>
+              </div>
+          </td>
 
-    <tr>
-        <td>
-            <div id="testxem">
-                <p><strong>Fließende Satinbluse mit Volant</strong></p>
-                <ol>
-                    <li>
-                        <p style="width: 250px" >
-                        </p>
-                    </li>
-
-                    <li><img src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym02.png" alt="" >
-                        <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym08.png" alt="" >
-                        <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0C.png" alt="" >
-                        <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym0F.png" alt="" >
-                        <img  src="http://pics3.esprit.de/Shop/images/default/global/caresymbols/CareSym06.png" alt="" ></li>
-                </ol>
-            </div>
-        </td>
-
-
-
-
-
-
-
-
-
-        <!--
-    Responsive Email Template by meartlab
-    A component of source: codepen.io - zoom effect:elevateZoom
-    Licensed under MIT
-    --><td>
+          <!--central Bereich für fotos des Produktes  -->
+          <td>
         <div class="container">
             <div class="row">
                 <div class=" col-sm-4 col-xs-4">
-                    <h4 style="margin-top: 50px">   "   " </h4>
+                    <h4 style="margin-top: 50px">   </h4>
                     <h6></h6>
                     <div class="container">
                         <div id='carousel-custom' class='carousel slide' data-ride='carousel'>
@@ -45,34 +27,28 @@
                                 <!-- main fotos -->
                                 <div class='carousel-inner '>
                                     <div class='item active'>
-                                         <img  src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg'  />
+                                         <img  class="fancybox" src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg'  />
                                     </div>
-                                    <div class='item'  id="zoom_05">
-                                        <img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg'  />
-                                    </div>
-                                    <div class='item'>
-                                        <img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg' />
-                                    </div>
-
-                                    <div class='item'>
-                                        <img src='http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg' />
+                                    <div class='item'  >
+                                        <img class="fancybox" src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg'  />
                                     </div>
                                     <div class='item'>
-                                        <img src='http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg' />
+                                        <img class="fancybox" src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image3xxl.jpg' />
                                     </div>
                                     <div class='item'>
-                                        <img src='http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg' />
+                                        <img  class="fancybox" src='http://images.asos-media.com/inv/media/3/6/7/0/4850763/multi/image1xxl.jpg' />
                                     </div>
                                     <div class='item'>
-                                        <img src='http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpg' />
+                                        <img class="fancybox" src='http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg' />
                                     </div>
-
-
+                                    <div class='item'>
+                                        <img class="fancybox" src='http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg' />
+                                    </div>
+                                    <div class='item'>
+                                        <img class="fancybox" src='http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpg' />
+                                    </div>
                                 </div>
-
-
-
-                            <!-- thumb fotos  -->
+                                <!-- thumb fotos  -->
                             <ol class='carousel-indicators mCustomScrollbar meartlab'>
                                 <li data-target='#carousel-custom' data-slide-to='0' class='active'><img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg' alt='' /></li>
                                 <li data-target='#carousel-custom' data-slide-to='1'><img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg' alt='' /></li>
@@ -81,42 +57,22 @@
                                 <li data-target='#carousel-custom' data-slide-to='4'><img src='http://images.asos-media.com/inv/media/5/2/1/3/4603125/gold/image1xxl.jpg' alt='' /></li>
                                 <li data-target='#carousel-custom' data-slide-to='5'><img src='http://images.asos-media.com/inv/media/5/3/6/8/4948635/mink/image1xxl.jpg' alt='' /></li>
                                 <li data-target='#carousel-custom' data-slide-to='6'><img src='http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpg' alt='' /></li>
-
                             </ol>
                         </div>
-
-                    </div>
+                        </div>
                 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                    <!-- rechter Bereich, wo Preis, Warenkorbbutton und Wunschzettelbutton erhält  -->
                 <td>
-            <div id = "button2" >
+            <div id = "preis" >
                 <h2> Preis </h2>
             </div>
-            <div class ="grad" id = "button2">
-                <h2 id ="button22"></h2>
-            </div>
-            <div id = "button1">
+
+            <div id = "groeße">
                 <ul>
                     <ul>
                         <p id = "Groesse"><strong>Größe</strong></p>
-                        <select name="size">
+                        <select id = "Groesse" name="size">
                             <option value="Wählen">Wählen</option>
                             <option value="XS">XS</option>
                             <option value="S">S</option>
@@ -128,16 +84,48 @@
                 </ul>
             </div>
             <h3>
-                <div id = "button2">
-                    <button id ="button21" type="button" class="btn  "><strong>In den Warenkorb</strong></button>
-                </div></h3>
+                <a href="/warenkorb.html">
+                    <div >
+                        <button id ="warenkorb" type="button" class="btn" ><strong>In den Warenkorb</strong></button>
+                    </div>
+                </a>
+            </h3>
             <h3>
-                <div id ="button3">
-                    <button id ="button31" type="button" class="btn  "><strong>Wunschzettel</strong></button>
-                </div></h3>
+                <a href="wunschzettel.html">
+                    <div>
+                        <button id="wunschzettel"  type="button" class="btn"><strong>Wunschzettel</strong></button>
+                    </div>
+                </a>
+            </h3>
 
         </td>
     </tr>
 </table>
+
+
+<!-- Vergrößerungsfunktion  -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
+<script type="text/javascript">
+    $(function($){
+        var addToAll = false;
+        var gallery = true;
+        var titlePosition = 'inside';
+        $(addToAll ? 'img' : 'img.fancybox').each(function(){
+            var $this = $(this);
+            var title = $this.attr('title');
+            var src = $this.attr('data-big') || $this.attr('src');
+            var a = $('<a href="#" class="fancybox"></a>').attr('href', src).attr('title', title);
+            $this.wrap(a);
+        });
+        if (gallery)
+            $('a.fancybox').attr('rel', 'fancyboxgallery');
+        $('a.fancybox').fancybox({
+            titlePosition: titlePosition
+        });
+    });
+    $.noConflict();
+</script>
 
 
