--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -1,98 +1,67 @@
 
-
-
-#button1
-{
-  margin-left: 0;
-}
+// button design
 #Groesse
 {
-  margin-left: 5px ;
-  margin-bottom: -2px;
+  margin-left: -82px ;
 }
-#button11
+#warenkorb
 {
-  color: black;
-  background-color: #e7e7e7;
-  padding-right: 33px;
-}
-#button2
-{
-  margin-left:79px;
-}
-
-#button3
-{
-  margin-left:79px;
-}
-#button21
-{
+  height: 40px;
+  width: 160px;
   color: white;
-  background-color:#e7e7e7 ;
-  padding-right: 39px;
+  background-color: #572eff ;
 }
-#button31
-{ color: black;
-  background-color: #e7e7e7;
-  padding-right: 39px;
-}
-.grad
+#wunschzettel
 {
-  margin-bottom: 30px;
-  width:20px;
-  height:20px;
-  border-radius:50px;
-  background:linear-gradient(to bottom, #FF0000 , #FF0000 )
+  height: 40px;
+  color: white;
+  background-color: #572eff ;
+  width: 160px;
 }
 
+// gallery design
 
-
-
-
-
-
-
-
-
-
-
-.carousel-inner {
+.carousel-inner
+{
   position: relative;
   width: 100%;
   min-height: 300px;
 }
 
-.carousel-control.right {
+.carousel-control.right
+{
   right: 0;
   left: auto;
   background-image: none !important;
   background-repeat: repeat-x;
 }
-.carousel-control.left {
+.carousel-control.left
+{
   left: 0;
   right: auto;
   background-image: none !important;
   background-repeat: repeat-x;
 }
-#carousel-example-generic {
+#carousel-example-generic
+{
   margin: 20px auto;
   width: 100%;
 }
-
 #carousel-custom {
   margin: 20px auto;
   width: 400px;
 }
-#carousel-custom .carousel-indicators {
+#carousel-custom .carousel-indicators
+{
   margin: 10px 0 0;
-
   position: static;
   text-align: left;
   white-space: nowrap;
   width: 100%;
   overflow:hidden;
 }
-#carousel-custom .carousel-indicators li {
+#carousel-custom .carousel-indicators li
+{
   background-color: transparent;
   -webkit-border-radius: 0;
   border-radius: 0;
@@ -101,36 +70,32 @@
   margin: 0 !important;
   width: auto;
 }
-#carousel-custom .carousel-indicators li img {
+#carousel-custom .carousel-indicators li img
+{
   display: block;
   opacity: 0.5;
 }
-#carousel-custom .carousel-indicators li.active img {
+#carousel-custom .carousel-indicators li.active img
+{
   opacity: 1;
 }
-#carousel-custom .carousel-indicators li:hover img {
+#carousel-custom .carousel-indicators li:hover img
+{
   opacity: 0.75;
 }
-#carousel-custom .carousel-outer {
+#carousel-custom .carousel-outer
+{
   position: relative;
 }
-.carousel-indicators li img {
+.carousel-indicators li img
+{
   height: 66px;
-  width: 52px;}
-
-
-
-
-
-
-
-
-
-.item:hover{
-
-
-  transform:scale(1.5);
-  transition: 0.8s linear;
-
-
+  width: 52px;
 }
+
+
+
+
+
+
+
