--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -1,5 +1,6 @@
 <div class="Webshoppage">
 <div class="container">
+    <div onload="ladeRunter()">
 
     <div class="list-group-Segment">
         <a href="#" class="list-group-item" onclick="sortdivTops();">Tops</a>
@@ -16,7 +17,7 @@
             <div class="aProdukt col-md-12">
                 <a class="thumbnail" href="/produktAnsicht.html">
                     <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
-                    <img  src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/work%20in%20Progress.png?BCB" >
+                    <img  src=  "https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/top1.jpg" >
                     <div class="wrapper">
                         <div class="caption produktShopName">
                             <!-- wird auf Produktbild gelegt-->
@@ -578,5 +579,6 @@
         </div>
     </div>
     </div>
+</div>
 </div>
 </div>
