--- a/app/tpl/partials/warenkorbMain.hbs
+++ b/app/tpl/partials/warenkorbMain.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="Warenkorbkontainer">
     <div class="row">
         <div class="col-sm-12 col-md-10 col-md-offset-1">
             <table class="table table-hover">
