--- a/app/less/artistAnsicht.less
+++ b/app/less/artistAnsicht.less
@@ -1,33 +1,6 @@
 
 /*Design Bereich der Produktpräsentation */
-.produktShop .produktShopName span {
-  color: #fff;
-}
-.produktShop .aProdukt{
-  margin-top: 20px;
-  width: 220px;
-  heigth:250px;
-}
 
+.Artistcontainer{
 
-.produktShop .produktShopName {
-  background-color: rgba(7, 7, 7, 0.65);
-  color: #8b7f48;
-  margin-top: -30px;
-  position: relative;
-  text-align: center;
-  width: 100%;
-  z-index: 1;
-  height: 50px;
-  overflow: hidden;
-}
-.thumbnail img {
-  width: 220px;
-  height: 250px;
-}
-
-.produktShopName span {
-  line-height: 30px;
-  position: relative;
-  top: -10px;
 }
