--- a/app/tpl/partials/artistAnsichtmain.hbs
+++ b/app/tpl/partials/artistAnsichtmain.hbs
@@ -1,61 +1,7 @@
 
 
 
-
-<div>
-    <div class="container">
-        <div class="logoArtist">
-            <img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/work%20in%20Progress.png?BCB"/>
-        </div>
-        <div class="artistText">
-            <p>Hier wird mal ein langer Text stehn , aber gerade nur dieser blöder Platzhaltert aus Test gründen</p>
-        </div>
-        <div class="row produktShop" >
-            <div class="aProdukt col-md-12">
-                <a class="thumbnail" href="/produktAnsicht.html">
-                    <!-- Einbindung des Bildes : hier Bsp link aus dem web-->
-                    <img  src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/work%20in%20Progress.png?BCB" >
-                    <div class="wrapper">
-                        <div class="caption produktShopName">
-                            <!-- wird auf Produktbild gelegt-->
-                            <span>Produkt Preis</span>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="aProdukt col-md-12">
-                <a class="thumbnail" href="/produktAnsicht.html">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                    <div class="wrapper">
-                        <div class="caption produktShopName">
-                            <span>Produkt Preis</span>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <div class="row produktShop" >
-            <div class="aProdukt col-md-12">
-                <a class="thumbnail" href="/produktAnsicht.html">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                    <div class="wrapper">
-                        <div class="caption produktShopName">
-                            <span>Produkt Preis</span>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="aProdukt col-md-12">
-                <a class="thumbnail" href="/produktAnsicht.html">
-                    <img  src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" >
-                    <div class="wrapper">
-                        <div class="caption produktShopName">
-                            <span>Produkt Preis</span>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            </div>
-        </div>
-    </div>
+<div class="Artistcontainer">
+    <img src="https://thabefrijo-bq.global.ssl.fastly.net/v1/file/www/img/work%20in%20Progress.png?BCB"/>
+    <p>Hier wird mal ein langer Text stehn , aber gerade nur dieser blöder Platzhaltert aus Test gründen</p>
 </div>
