--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,5 +1,5 @@
 <div id="PApage">
-
+<!--alles was hier stand wird in der Produktansicht.js ausgeführt-->
 </div>
 <!-- Vergrößerungsfunktion  -->
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
