Produktansicht wieder eingefügt wi letzer stand von thang

--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,6 +1,5 @@
-<div id="PApage">
-<!--alles was hier stand wird in der Produktansicht.js ausgeführt-->
-    table align="center">
+
+<table align="center">
 
     <!-- Gebit für die Beschreibung -->
     <tr>
@@ -101,10 +100,9 @@
 
         </td>
     </tr>
-    </table>
+</table>
 
 
-</div>
 <!-- Vergrößerungsfunktion  -->
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
