Fehler inner LInk behoben

--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -91,7 +91,7 @@
                 </a>
             </h3>
             <h3>
-                <a href="wunschzettel.html">
+                <a href="/wunschzettel.html">
                     <div>
                         <button id="wunschzettel"  type="button" class="btn"><strong>Wunschzettel</strong></button>
                     </div>
