--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,7 +1,123 @@
-
 <table align="center">
 
     <!-- Gebit für die Beschreibung -->
+    <tr>
+        <td>
+            <div id="testxem">
+                <div id="PApagetext">
+                    <!-- IN Produktansicht.js zu finden, wird erst mit DB Daten befüllt dann hier erzeugt-->
+
+                </div>
+                <ol>
+                    <li>
+                        <p style="width: 250px"></p>
+                    </li>
+                </ol>
+
+            </div>
+        </td>
+
+        <!--central Bereich für fotos des Produktes  -->
+        <td>
+            <div class="container">
+                <div class="row">
+                    <div class=" col-sm-4 col-xs-4">
+                        <h4 style="margin-top: 50px"></h4>
+                        <h6></h6>
+                        <div class="container">
+                            <div id='carousel-custom' class='carousel slide' data-ride='carousel'>
+                                <div class='carousel-outer'>
+                                    <!-- main fotos -->
+                                    <div id="PApageIMG">
+                                        <!-- IN Produktansicht.js zu finden, wird erst mit DB Daten befüllt dann hier erzeugt-->
+
+                                    </div>
+                                    <!-- thumb fotos  -->
+                                    <div id="PApageIMG2">
+                                        <!-- IN Produktansicht.js zu finden, wird erst mit DB Daten befüllt dann hier erzeugt-->
+
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- rechter Bereich, wo Preis, Warenkorbbutton und Wunschzettelbutton erhält  -->
+
+        <td>
+            <div id="PApagerigth">
+                <!-- IN Produktansicht.js zu finden, wird erst mit DB Daten befüllt dann hier erzeugt-->
+
+            </div>
+        </td>
+    </tr>
+
+</table>
+
+
+<!-- Vergrößerungsfunktion  -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript"
+        src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
+<script type="text/javascript">
+    $(function ($) {
+        var addToAll = false;
+        var gallery = true;
+        var titlePosition = 'inside';
+        $(addToAll ? 'img' : 'img.fancybox').each(function () {
+            var $this = $(this);
+            var title = $this.attr('title');
+            var src = $this.attr('data-big') || $this.attr('src');
+            var a = $('<a href="#" class="fancybox"></a>').attr('href', src).attr('title', title);
+            $this.wrap(a);
+        });
+        if (gallery)
+            $('a.fancybox').attr('rel', 'fancyboxgallery');
+        $('a.fancybox').fancybox({
+            titlePosition: titlePosition
+        });
+    });
+    $.noConflict();
+</script>
+<!-- jQuery plugin -->
+<link rel="stylesheet" type="text/css" media="screen"
+      href="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.css"/>
+<style type="text/css">
+    a.fancybox img {
+        border: none;
+        box-shadow: 0 1px 7px rgba(0, 0, 0, 0.6);
+        -o-transform: scale(1, 1);
+        -ms-transform: scale(1, 1);
+        -moz-transform: scale(1, 1);
+        -webkit-transform: scale(1, 1);
+        transform: scale(1, 1);
+        -o-transition: all 0.2s ease-in-out;
+        -ms-transition: all 0.2s ease-in-out;
+        -moz-transition: all 0.2s ease-in-out;
+        -webkit-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+    }
+
+    a.fancybox:hover img {
+        position: relative;
+        z-index: 999;
+        -o-transform: scale(1.03, 1.03);
+        -ms-transform: scale(1.03, 1.03);
+        -moz-transform: scale(1.03, 1.03);
+        -webkit-transform: scale(1.03, 1.03);
+        transform: scale(1.03, 1.03);
+    }
+</style>
+
+
+
+<!-- Erstmal Sicherheitsauskommentiert
+<table align="center">
+
+     Gebit für die Beschreibung
     <tr>
         <td>
             <div id="testxem">
@@ -14,7 +130,7 @@
             </div>
         </td>
 
-        <!--central Bereich für fotos des Produktes  -->
+        central Bereich für fotos des Produktes
         <td>
             <div class="container">
                 <div class="row">
@@ -24,7 +140,7 @@
                         <div class="container">
                             <div id='carousel-custom' class='carousel slide' data-ride='carousel'>
                                 <div class='carousel-outer'>
-                                    <!-- main fotos -->
+                                     main fotos
                                     <div class='carousel-inner '>
                                         <div class='item active'>
                                             <img  class="fancybox" src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg'  />
@@ -48,7 +164,7 @@
                                             <img class="fancybox" src='http://images.asos-media.com/inv/media/1/3/0/8/5268031/image2xxl.jpg' />
                                         </div>
                                     </div>
-                                    <!-- thumb fotos  -->
+                                    thumb fotos
                                     <ol class='carousel-indicators mCustomScrollbar meartlab'>
                                         <li data-target='#carousel-custom' data-slide-to='0' class='active'><img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/print/image1xxl.jpg' alt='' /></li>
                                         <li data-target='#carousel-custom' data-slide-to='1'><img src='http://images.asos-media.com/inv/media/8/2/3/3/5313328/image2xxl.jpg' alt='' /></li>
@@ -62,7 +178,7 @@
                             </div>
                         </div>
 
-                        <!-- rechter Bereich, wo Preis, Warenkorbbutton und Wunschzettelbutton erhält  -->
+                        rechter Bereich, wo Preis, Warenkorbbutton und Wunschzettelbutton erhält
         <td>
             <div id = "preis" >
                 <h2> Preis </h2>
@@ -103,7 +219,7 @@
 </table>
 
 
-<!-- Vergrößerungsfunktion  -->
+ Vergrößerungsfunktion
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
@@ -127,7 +243,7 @@
     });
     $.noConflict();
 </script>
-<!-- jQuery plugin -->
+ jQuery plugin
 <link rel="stylesheet" type="text/css" media="screen" href="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.css" />
 <style type="text/css">
     a.fancybox img {
@@ -138,4 +254,4 @@
     a.fancybox:hover img {
         position: relative; z-index: 999; -o-transform: scale(1.03,1.03); -ms-transform: scale(1.03,1.03); -moz-transform: scale(1.03,1.03); -webkit-transform: scale(1.03,1.03); transform: scale(1.03,1.03);
     }
-</style>
+</style>-->
