--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -12,6 +12,7 @@
     <!-- Zur Zeit 3 Reihen a 3 Produkte-->
 
     <div id="list">
+        <!-- IN main.js zu finden, wird erst mit DB Daten befüllt dann hier erzeugt-->
 
 
     </div>
