webshop  ausführliche Kommentare

--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -1,7 +1,7 @@
 <div class="Webshoppage">
 <div class="container">
 
-
+<!-- An der Seite zu findendende Kategorienauswahl-->
     <div class="list-group-Segment">
         <a href="#" class="list-group-item" onclick="sortdivTops();">Tops</a>
         <a href="#" class="list-group-item" onclick="sortdivShirt();">Shirts</a>
@@ -9,7 +9,7 @@
         <a href="#" class="list-group-item" onclick="sortdivJacken();">Jacken</a>
     </div>
     <!-- Produnktpräsenationsbereich-->
-    <!-- Zur Zeit 3 Reihen a 3 Produkte-->
+    <!-- Zur Zeit Reihen a 3 Produkte-->
 
     <div id="list">
         <!-- IN main.js zu finden, wird erst mit DB Daten befüllt dann hier erzeugt-->
