Kommenatre over Kommentare

--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -92,7 +92,7 @@
   height: 66px;
   width: 52px;
 }
-
+/* Für Vergrößerungsfunktion der Produktansichtbilder*/
 a.fancybox img {
   border: none;
   box-shadow: 0 1px 7px rgba(0,0,0,0.6);
