--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -19,14 +19,15 @@
 <script src="js/artistListAnsicht.js"></script> 
 <script src="js/lightbox-plus-jquery.js"></script> 
 <script src="js/impressum.js"></script> 
+<!-- für den Zoom -->
 <script type="text/javascript" src="../../js/jquery.elevatezoom.js"></script>
 
-<!-- Vergrößerungsfunktion  -->
+<!-- Vergrößerungsfunktion fancybox  -->
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
-<!--jQuery plugin-->
+<!--jQuery plugin für Vergrößerung fancbox -->
 <link rel="stylesheet" type="text/css" media="screen" href="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.css" />
 
 <!-- endbuild -->
