Kommenatre over Kommentare 3

--- a/app/tpl/partials/artistListAnsichtmain.hbs
+++ b/app/tpl/partials/artistListAnsichtmain.hbs
@@ -1,3 +1,6 @@
+<!-- Hier noch  alles statistsich so haben wir mal angefangen, vergleichbar mit Webshop-->
+
+
 <!-- Artsitlistenbereich-->
 <div class="container">
 <div id = "buttonArtist">
