--- a/app/less/warenkorb.less
+++ b/app/less/warenkorb.less
@@ -1,5 +1,8 @@
  .Warenkorbkontainer{
-    margin-top: 150px ;
-    width: 600px;
-    height:auto ;
-}
+      position: relative;
+      display: block;
+      margin-left: 670px;
+      margin-top: 150px ;
+      width: 200px;
+      height:auto ;
+  }
