--- a/app/less/wunschzettel.less
+++ b/app/less/wunschzettel.less
@@ -1,5 +1,9 @@
 .Wunschzettelcontainer{
+
+  position: relative;
+  display: block;
+  margin-left: 670px;
   margin-top: 150px ;
-  width: 600px;
+  width: 200px;
   height:auto ;
 }
