--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -3,7 +3,7 @@
     <!-- Gebit für die Beschreibung -->
     <tr>
         <td>
-            <div id="testxem">
+            <div>
                 <div id="PApagetext">
                     <!-- IN Produktansicht.js zu finden, wird erst mit DB Daten befüllt dann hier erzeugt-->
 
