--- a/app/tpl/partials/wunschzettelMain.hbs
+++ b/app/tpl/partials/wunschzettelMain.hbs
@@ -1,4 +1,7 @@
-<div class="Wunschzettelcontainer">
+
+
+
+<div class="Warenkorbkontainer">
     <div class="row">
         <div class="col-sm-12 col-md-10 col-md-offset-1">
             <table class="table table-hover">
@@ -64,7 +67,7 @@
                         </button></td>
                     <td>
                         <button type="button" class="btn btn-success">
-                            In den Warenkorb <span class="glyphicon glyphicon-play"></span>
+                            in den Warenkorb <span class="glyphicon glyphicon-play"></span>
                         </button></td>
                 </tr>
                 </tbody>
@@ -72,3 +75,6 @@
         </div>
     </div>
 </div>
+
+
+
