--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -90,7 +90,7 @@
 .carousel-indicators li img
 {
   height: 66px;
-  width: 52px;
+  width: 56px
 }
 /* Für Vergrößerungsfunktion der Produktansichtbilder*/
 a.fancybox img {
