impressum - form schöner gemacht

--- a/app/tpl/partials/impressumMain.hbs
+++ b/app/tpl/partials/impressumMain.hbs
@@ -16,7 +16,7 @@
     <pre id="infos">
         POWER TO THE PEOPLE
         Straße 1
-        21000 Hamburg
+        20000 Hamburg
         Germany
         E-Mail Adresse: service@pttp.de
 
@@ -26,12 +26,6 @@
 
 </div>
 
-<div id="main">
-    <div id="form_sample"></div> <!-- Include JS file here -->
-    <script src="impressum.js"></script>
-</div>
-
-<!--Contact form
 <div id="contactForm">
     <h4 id="contactTitle">Contact Us</h4>
     <div class="form-group">
@@ -39,7 +33,7 @@
         <input type="text" class="form-control" id="usr">
     </div>
     <div class="form-group">
-        <label for="email">e-mail:</label>
+        <label for="email">E-mail:</label>
         <input type="email" class="form-control" id="email">
     </div>
     <div class="form-group">
@@ -52,4 +46,4 @@
     </div>
 
     <div id="send" class="btn btn-primary" onsend="validateForm()">Send</div>
-</div>-->
+</div>
