--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -67,7 +67,7 @@
             </li>
 
             <li>
-                <a id="b4" , class="btn btn-link" , href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a>
+                <a id="b4" , class="btn btn-link" ,  href='/warenkorb.html'><span class="glyphicon glyphicon-shopping-cart"></span></>
             </li>
 
             <li>
